--- a/app/src/main/res/layout/fragment_list_devices.xml
+++ b/app/src/main/res/layout/fragment_list_devices.xml
@@ -4,16 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.ListDevices.ListDevicesFragment">
+    app:defaultNavHost="true"
+    tools:context=".ui.ListDevices.view.ListDevicesFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent">$
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/device_rv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@color/gray"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
