--- a/app/src/main/res/layout/item_device_heater.xml
+++ b/app/src/main/res/layout/item_device_heater.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content">
 
         <ImageButton
-            android:id="@+id/delete_bt"
+            android:id="@+id/delete_bt_heater"
             style="@style/Theme.SmartHome.btn_close"
             android:background="@color/yellow_clear"
             app:layout_constraintBottom_toTopOf="@id/device_name_tv"
@@ -25,7 +25,7 @@
             android:theme="@style/Theme.SmartHome.Text"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/delete_bt" />
+            app:layout_constraintTop_toBottomOf="@id/delete_bt_heater" />
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/device_temperature_tv"
