--- a/app/src/main/res/layout/item_device_light.xml
+++ b/app/src/main/res/layout/item_device_light.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content">
 
         <ImageButton
-            android:id="@+id/delete_bt"
+            android:id="@+id/delete_bt_light"
             style="@style/Theme.SmartHome.btn_close"
             android:background="@color/blue_clear"
             app:layout_constraintBottom_toTopOf="@id/device_name_tv"
@@ -23,7 +23,7 @@
             android:theme="@style/Theme.SmartHome.Text"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/delete_bt" />
+            app:layout_constraintTop_toBottomOf="@id/delete_bt_light" />
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/device_intensity_tv"
