--- a/app/src/main/res/layout/item_device_heater.xml
+++ b/app/src/main/res/layout/item_device_heater.xml
@@ -16,7 +16,7 @@
             android:background="@color/yellow_clear"
             app:layout_constraintBottom_toTopOf="@id/device_name_tv"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"></ImageButton>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/device_name_tv"
