--- a/app/src/main/res/layout/item_device_light.xml
+++ b/app/src/main/res/layout/item_device_light.xml
@@ -43,6 +43,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
+            android:enabled="false"
             app:layout_constraintTop_toBottomOf="@id/device_intensity_tv" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
