--- a/app/src/main/res/layout/item_device_roller.xml
+++ b/app/src/main/res/layout/item_device_roller.xml
@@ -34,6 +34,7 @@
             android:theme="@style/Theme.SmartHome.Text.content"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
+            android:enabled="false"
             app:layout_constraintTop_toBottomOf="@id/device_name_tv" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
