--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -20,6 +20,13 @@
         <item name="android:gravity">center_horizontal</item>
 
     </style>
+    <style name="Theme.SmartHome.Text.title">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">30sp</item>
+        <item name="android:layout_marginTop">5dp</item>
+        <item name="android:gravity">center_horizontal</item>
+
+    </style>
 
     <style name="Theme.SmartHome.Text.content" parent="Theme.SmartHome.Text">
         <item name="android:textSize">20sp</item>
@@ -32,6 +39,14 @@
         <item name="android:layout_margin">5dp</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">150dp</item>
+
+    </style>
+    <style name="Theme.SmartHome.card.details">
+        <item name="cardCornerRadius">8dp</item>
+        <item name="cardElevation">2dp</item>
+        <item name="android:layout_margin">5dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
 
     </style>
 
