--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -13,7 +13,6 @@
         <action
             android:id="@+id/action_to_roller_device"
             app:destination="@id/device_details_roller" />
-
         <action
             android:id="@+id/action_to_heater_device"
             app:destination="@id/device_details_heater" />
@@ -46,7 +45,7 @@
 
     <fragment
         android:id="@+id/device_details_light"
-        android:name="com.moduloTech.smarthome.ui.DetailsDevice.DetailsDeviceLightFragment"
+        android:name="com.moduloTech.smarthome.ui.DetailsDevice.light.DetailsDeviceLightFragment"
         android:label="@string/app_Light"
         tools:layout="@layout/details_device_light_fragment">
 
