--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,9 +2,9 @@
     <!-- Base application theme. -->
     <style name="Theme.SmartHome" parent="Theme.MaterialComponents">
         <item name="colorPrimary">@color/gray</item>
-        <item name="colorPrimaryDark">@color/gray_dark</item>
+        <item name="colorPrimaryDark">@color/gray</item>@zaa
         <item name="colorAccent">@color/white</item>
-        <item name="background">@color/gray</item>
+        <item name="android:windowBackground">@color/gray</item>
         <item name="actionBarStyle">@style/Theme.SmartHome.actionbarStyle</item>
     </style>
 
@@ -20,6 +20,7 @@
         <item name="android:gravity">center_horizontal</item>
 
     </style>
+
     <style name="Theme.SmartHome.Text.title">
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">30sp</item>
@@ -41,12 +42,14 @@
         <item name="android:layout_height">150dp</item>
 
     </style>
+
     <style name="Theme.SmartHome.card.details">
         <item name="cardCornerRadius">8dp</item>
         <item name="cardElevation">2dp</item>
         <item name="android:layout_margin">5dp</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center_horizontal|center_vertical</item>
 
     </style>
 
