--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -61,4 +61,31 @@
 
     </style>
 
-</resources>
+    <style name="Theme.SmartHome.edit_text">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginLeft">5dp</item>
+        <item name="android:layout_marginRight">5dp</item>
+        <item name="android:layout_margin">2dp</item>
+        <item name="hintTextColor">@color/black</item>
+        <item name="android:textColorHighlight">@color/black</item>
+    </style>
+
+
+    <style name="Theme.SmartHome.edit_text.layout">
+        <item name="boxBackgroundColor">@color/white</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_marginLeft">10dp</item>
+        <item name="android:layout_marginRight">10dp</item>
+        <item name="android:layout_margin">2dp</item>
+    </style>
+
+
+    <style name="CustomButtonStyle" parent="Widget.MaterialComponents.Button">
+        <item name="backgroundTint">@color/yellow_clear</item>
+        <item name="rippleColor">@color/red_clear</item>
+        <item name="strokeWidth">1dp</item>
+        <item name="strokeColor">@color/black</item>
+    </style>
+    </resources>
