--- a/app/src/main/res/layout/details_device_light_fragment.xml
+++ b/app/src/main/res/layout/details_device_light_fragment.xml
@@ -48,13 +48,11 @@
                 />
 
             <com.google.android.material.switchmaterial.SwitchMaterial
-                android:id="@+id/state_switch_light"
+                android:id="@+id/switch_light"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintLeft_toLeftOf="parent"
                 android:enabled="true"
-                android:textOn="ON"
-                android:textOff="OFf"
                 app:layout_constraintTop_toBottomOf="@id/device_intensity_tv" />
 
 
