--- a/app/src/main/res/layout/details_device_roller_fragment.xml
+++ b/app/src/main/res/layout/details_device_roller_fragment.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".ui.DetailsDevice.light.DetailsDeviceLightFragment">
 
-    <com.google.android.material.card.MaterialCardView xmlns:tools="http://schemas.android.com/tools"
+    <com.google.android.material.card.MaterialCardView
         style="@style/Theme.SmartHome.card.details"
         app:cardBackgroundColor="@color/red_clear"
        >
@@ -37,7 +37,7 @@
 
 
             <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/device_roller_position"
+                android:id="@+id/roller_position_tv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:theme="@style/Theme.SmartHome.Text.content"
