--- a/app/src/main/res/layout/item_device_light.xml
+++ b/app/src/main/res/layout/item_device_light.xml
@@ -14,6 +14,7 @@
             android:background="@color/blue_clear"
             app:layout_constraintBottom_toTopOf="@id/device_name_tv"
             app:layout_constraintRight_toRightOf="parent"
+            android:contentDescription="@null"
             app:layout_constraintTop_toTopOf="parent" />
 
         <com.google.android.material.textview.MaterialTextView
@@ -23,6 +24,7 @@
             android:theme="@style/Theme.SmartHome.Text"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
+            android:contentDescription="@null"
             app:layout_constraintTop_toBottomOf="@id/delete_bt_light" />
 
         <com.google.android.material.textview.MaterialTextView
