--- a/app/src/main/res/layout/item_device_roller.xml
+++ b/app/src/main/res/layout/item_device_roller.xml
@@ -16,7 +16,7 @@
             android:src="@android:drawable/ic_menu_close_clear_cancel"
             app:layout_constraintBottom_toTopOf="@id/device_name_tv"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:contentDescription="@null"            app:layout_constraintTop_toTopOf="parent" />
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/device_name_tv"
