--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,6 +6,7 @@
         <item name="colorAccent">@color/white</item>
         <item name="android:windowBackground">@color/gray</item>
         <item name="actionBarStyle">@style/Theme.SmartHome.actionbarStyle</item>
+
     </style>
 
     <style name="Theme.SmartHome.actionbarStyle" parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
@@ -68,6 +69,10 @@
         <item name="android:layout_marginRight">5dp</item>
         <item name="android:layout_margin">2dp</item>
         <item name="hintTextColor">@color/black</item>
+        <item name="hintEnabled">true</item>
+        <item name="android:textColorHint">@color/blue_clear</item>
+
+        <item name="android:textColor">@color/black</item>
         <item name="android:textColorHighlight">@color/black</item>
     </style>
 
@@ -79,8 +84,14 @@
         <item name="android:layout_marginLeft">10dp</item>
         <item name="android:layout_marginRight">10dp</item>
         <item name="android:layout_margin">2dp</item>
+        <item name="hintTextColor">@color/black</item>
+
     </style>
 
+    <style name="HintText" parent="TextAppearance.Design.Hint">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
 
     <style name="CustomButtonStyle" parent="Widget.MaterialComponents.Button">
         <item name="backgroundTint">@color/yellow_clear</item>
@@ -88,4 +99,9 @@
         <item name="strokeWidth">1dp</item>
         <item name="strokeColor">@color/black</item>
     </style>
-    </resources>
+
+    <style name="CounterOverFlow" parent="TextAppearance.Design.Counter.Overflow">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/red_clear</item>
+    </style>
+</resources>
