--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,10 +1,10 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="Theme.SmartHome" parent="Theme.MaterialComponents">
+    <style name="Theme.SmartHome" parent="Theme.MaterialComponents.DayNight">
         <item name="colorPrimary">@color/gray</item>
         <item name="colorPrimaryDark">@color/gray</item>@zaa
         <item name="colorAccent">@color/white</item>
-        <item name="background">@color/gray_dark</item>
+        <item name="android:windowBackground">@color/gray</item>
         <item name="actionBarStyle">@style/Theme.SmartHome.actionbarStyle</item>
     </style>
 
@@ -12,13 +12,11 @@
         <item name="android:background">@color/gray</item>
     </style>
 
-
     <style name="Theme.SmartHome.Text">
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">10sp</item>
         <item name="android:layout_marginTop">2dp</item>
         <item name="android:gravity">center_horizontal</item>
-
     </style>
 
     <style name="Theme.SmartHome.Text.title">
@@ -26,7 +24,6 @@
         <item name="android:textSize">30sp</item>
         <item name="android:layout_marginTop">5dp</item>
         <item name="android:gravity">center_horizontal</item>
-
     </style>
 
     <style name="Theme.SmartHome.Text.content" parent="Theme.SmartHome.Text">
@@ -40,7 +37,6 @@
         <item name="android:layout_margin">5dp</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">150dp</item>
-
     </style>
 
     <style name="Theme.SmartHome.card.details">
@@ -49,7 +45,7 @@
         <item name="android:layout_margin">5dp</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-
+        <item name="android:layout_gravity">center_horizontal|center_vertical</item>
     </style>
 
     <style name="Theme.SmartHome.btn_close">
@@ -57,7 +53,45 @@
         <item name="android:layout_height">20dp</item>
         <item name="android:layout_margin">5dp</item>
         <item name="android:src">@android:drawable/ic_menu_close_clear_cancel</item>
-
     </style>
 
+    <style name="Theme.SmartHome.edit_text">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginLeft">5dp</item>
+        <item name="android:layout_marginRight">5dp</item>
+        <item name="android:layout_margin">2dp</item>
+        <item name="hintTextColor">@color/black</item>
+        <item name="hintEnabled">true</item>
+        <item name="android:textColorHint">@color/blue_clear</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textColorHighlight">@color/black</item>
+    </style>
+
+    <style name="Theme.SmartHome.edit_text.layout">
+        <item name="boxBackgroundColor">@color/white</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_marginLeft">10dp</item>
+        <item name="android:layout_marginRight">10dp</item>
+        <item name="android:layout_margin">2dp</item>
+        <item name="hintTextColor">@color/black</item>
+    </style>
+
+    <style name="HintText" parent="TextAppearance.Design.Hint">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="CustomButtonStyle" parent="Widget.MaterialComponents.Button">
+        <item name="backgroundTint">@color/yellow_clear</item>
+        <item name="rippleColor">@color/red_clear</item>
+        <item name="strokeWidth">1dp</item>
+        <item name="strokeColor">@color/black</item>
+    </style>
+
+    <style name="CounterOverFlow" parent="TextAppearance.Design.Counter.Overflow">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/red_clear</item>
+    </style>
 </resources>
