--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,21 +1,19 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="Theme.SmartHome" parent="Theme.MaterialComponents">
-        <item name="colorPrimary">@color/gray</item>
-        <item name="colorPrimaryDark">@color/gray</item>@zaa
+    <style name="Theme.SmartHome" parent="Theme.MaterialComponents.DayNight">
+        <item name="colorPrimary">@color/white</item>
+        <item name="colorPrimaryDark">@color/white</item>@zaa
         <item name="colorAccent">@color/white</item>
-        <item name="android:windowBackground">@color/gray</item>
+        <item name="android:windowBackground">@color/white</item>
         <item name="actionBarStyle">@style/Theme.SmartHome.actionbarStyle</item>
-
     </style>
 
     <style name="Theme.SmartHome.actionbarStyle" parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
-        <item name="android:background">@color/gray</item>
+        <item name="android:background">@color/white</item>
     </style>
 
-
     <style name="Theme.SmartHome.Text">
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/black</item>
         <item name="android:textSize">10sp</item>
         <item name="android:layout_marginTop">2dp</item>
         <item name="android:gravity">center_horizontal</item>
@@ -23,11 +21,10 @@
     </style>
 
     <style name="Theme.SmartHome.Text.title">
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/black</item>
         <item name="android:textSize">30sp</item>
         <item name="android:layout_marginTop">5dp</item>
         <item name="android:gravity">center_horizontal</item>
-
     </style>
 
     <style name="Theme.SmartHome.Text.content" parent="Theme.SmartHome.Text">
@@ -41,7 +38,6 @@
         <item name="android:layout_margin">5dp</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">150dp</item>
-
     </style>
 
     <style name="Theme.SmartHome.card.details">
@@ -51,7 +47,6 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">center_horizontal|center_vertical</item>
-
     </style>
 
     <style name="Theme.SmartHome.btn_close">
@@ -59,7 +54,6 @@
         <item name="android:layout_height">20dp</item>
         <item name="android:layout_margin">5dp</item>
         <item name="android:src">@android:drawable/ic_menu_close_clear_cancel</item>
-
     </style>
 
     <style name="Theme.SmartHome.edit_text">
@@ -71,11 +65,9 @@
         <item name="hintTextColor">@color/black</item>
         <item name="hintEnabled">true</item>
         <item name="android:textColorHint">@color/blue_clear</item>
-
         <item name="android:textColor">@color/black</item>
         <item name="android:textColorHighlight">@color/black</item>
     </style>
-
 
     <style name="Theme.SmartHome.edit_text.layout">
         <item name="boxBackgroundColor">@color/white</item>
@@ -85,7 +77,6 @@
         <item name="android:layout_marginRight">10dp</item>
         <item name="android:layout_margin">2dp</item>
         <item name="hintTextColor">@color/black</item>
-
     </style>
 
     <style name="HintText" parent="TextAppearance.Design.Hint">
@@ -103,5 +94,13 @@
     <style name="CounterOverFlow" parent="TextAppearance.Design.Counter.Overflow">
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/red_clear</item>
+    </style>
+
+    <style name="DatePickerDialog" parent="@android:style/Theme.Holo.Light">
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="colorAccent">@color/white</item>
     </style>
 </resources>
