--- a/app/src/main/res/layout/details_device_roller_fragment.xml
+++ b/app/src/main/res/layout/details_device_roller_fragment.xml
@@ -9,8 +9,7 @@
 
     <com.google.android.material.card.MaterialCardView
         style="@style/Theme.SmartHome.card.details"
-        app:cardBackgroundColor="@color/red_clear"
-       >
+        app:cardBackgroundColor="@color/red_clear">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
