--- a/app/src/main/res/drawable/ic_user.xml
+++ b/app/src/main/res/drawable/ic_user.xml
@@ -4,33 +4,41 @@
     android:height="512dp"
     android:viewportWidth="512"
     android:viewportHeight="512">
-  <path
-      android:pathData="M256,256m-256,0a256,256 0,1 1,512 0a256,256 0,1 1,-512 0">
-    <aapt:attr name="android:fillColor">
-      <gradient 
-          android:startY="512"
-          android:startX="256"
-          android:endY="0"
-          android:endX="256"
-          android:type="linear">
-        <item android:offset="0.2992278" android:color="#FFBC9A9A"/>
-        <item android:offset="1" android:color="#FFFFE000"/>
-      </gradient>
-    </aapt:attr>
-  </path>
-  <path
-      android:pathData="m331,166c0,-41.355 -33.645,-75 -75,-75s-75,33.645 -75,75 33.645,75 75,75 75,-33.645 75,-75zM256,241c-74.439,0 -135,60.561 -135,135v14.058c0,4.264 1.814,8.326 4.99,11.171 36.538,32.74 82.71,50.771 130.01,50.771 47.301,0 93.473,-18.031 130.01,-50.771 3.176,-2.845 4.99,-6.908 4.99,-11.171v-14.058c0,-74.439 -60.561,-135 -135,-135z">
-    <aapt:attr name="android:fillColor">
-      <gradient 
-          android:startY="452"
-          android:startX="256"
-          android:endY="91"
-          android:endX="256"
-          android:type="linear">
-        <item android:offset="0" android:color="#FFADDCFF"/>
-        <item android:offset="0.5028" android:color="#FFEAF6FF"/>
-        <item android:offset="1" android:color="#FFEAF6FF"/>
-      </gradient>
-    </aapt:attr>
-  </path>
+    <path android:pathData="M256,256m-256,0a256,256 0,1 1,512 0a256,256 0,1 1,-512 0">
+        <aapt:attr name="android:fillColor">
+            <gradient
+                android:endX="256"
+                android:endY="0"
+                android:startX="256"
+                android:startY="512"
+                android:type="linear">
+                <item
+                    android:color="#FFBC9A9A"
+                    android:offset="0.2992278" />
+                <item
+                    android:color="#FFFFE000"
+                    android:offset="1" />
+            </gradient>
+        </aapt:attr>
+    </path>
+    <path android:pathData="m331,166c0,-41.355 -33.645,-75 -75,-75s-75,33.645 -75,75 33.645,75 75,75 75,-33.645 75,-75zM256,241c-74.439,0 -135,60.561 -135,135v14.058c0,4.264 1.814,8.326 4.99,11.171 36.538,32.74 82.71,50.771 130.01,50.771 47.301,0 93.473,-18.031 130.01,-50.771 3.176,-2.845 4.99,-6.908 4.99,-11.171v-14.058c0,-74.439 -60.561,-135 -135,-135z">
+        <aapt:attr name="android:fillColor">
+            <gradient
+                android:endX="256"
+                android:endY="91"
+                android:startX="256"
+                android:startY="452"
+                android:type="linear">
+                <item
+                    android:color="#FFADDCFF"
+                    android:offset="0" />
+                <item
+                    android:color="#FFEAF6FF"
+                    android:offset="0.5028" />
+                <item
+                    android:color="#FFEAF6FF"
+                    android:offset="1" />
+            </gradient>
+        </aapt:attr>
+    </path>
 </vector>
