--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -15,8 +15,8 @@
     <item
         android:id="@+id/action_profile"
         android:icon="@drawable/ic_user"
-        app:showAsAction="ifRoom"
-        android:title="Upate user profile" />
+        android:title="Upate user profile"
+        app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/light_action"
